--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rakchaev/tinkoff-merchant-api#readme",
   "dependencies": {
+    "debug": "^2.6.8",
     "lodash": "^4.17.4",
     "request": "^2.79.0"
   }
